# lib/api-spec/openapi.yaml
@@ -831,6 +831,10 @@ components:
           type: integer
         userName:
           type: string
+        userDesignation:
+          type: ["string", "null"]
+        userDepartment:
+          type: ["string", "null"]
         isStaff:
           type: boolean
         text:
@@ -881,6 +885,10 @@ components:
         responderId:
           type: ["integer", "null"]
         responderName:
+          type: ["string", "null"]
+        responderDesignation:
+          type: ["string", "null"]
+        responderDepartment:
           type: ["string", "null"]
 
     InquiryInput:
